--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Listando os Administradores</h1>
+
+<div class="row">
+ <div class="col-lg-12">
+ <h1 class="page-header">Editando</h1>
+ </div>
+ <!-- /.col-lg-12 -->
+ </div>
+
 
 <div class="table-responsive">
  <table class="table table-striped table-bordered table-hover">
@@ -7,7 +14,7 @@
                                             <th>#</th>
                                             <th>Email</th>
                                             
-                                        </tr>
+                                        </tr>   
                                     </thead>
                                     <tbody>
                                         <% @admins.each do |admin|%>
