--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
  <div class="col-lg-12">
- <h1 class="page-header">Editando</h1>
+ <h1 class="page-header">listando adm</h1>
  </div>
  <!-- /.col-lg-12 -->
  </div>
