--- a/app/views/admins_backoffice/admins/edit.html.erb
+++ b/app/views/admins_backoffice/admins/edit.html.erb
@@ -6,6 +6,20 @@
 </div>
 
 <div class="row">
+
+  <% if @admin.errors.any? %>
+ <div class="alert alert-danger alert-dismissable">
+ <button type="button" class="close" data-dismiss="alert"
+aria-hidden="true">×</button>
+
+ <ul>
+ <% @admin.errors.full_messages.each do |message| %>
+ <li><%= message %></li>
+ <% end %>
+ </ul>
+
+ </div>
+<%end%>
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -22,12 +36,12 @@
 
               <div class="form-group">
                 <%= form.label :password %>
-                <%= form.text_field :password, class: "form-control", placeholder: "Senha" %>
+                <%= form.password_field :password, class: "form-control", placeholder: "Senha" %>
               </div>
 
               <div class="form-group">
                 <%= form.label :password_confirmation %>
-                <%= form.text_field :password_confirmation, class: "form-control", placeholder: "Confirmação da Senha" %>
+                <%= form.password_field :password_confirmation, class: "form-control", placeholder: "Confirmação da Senha" %>
               </div>
               <button type="submit" class="btn btn-default">Salvar</button>
             <% end %>
