cadastrando novos administradores new page

--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -13,11 +13,15 @@
                                         <tr>
                                             <th>#</th>
                                             <th>Email</th>
+                                            <th><%= link_to new_admins_backoffice_admin_path, class:"btn
+btn-success btn-circle" do %>
+<i class="fa fa-plus"></i>  
+<% end %></th>
                                             
                                         </tr>   
                                     </thead>
                                     <tbody>
-                                        <% @admins.each do |admin|%>
+                                        <% @admins.each do |admin|%>  
                                         <tr>
                                             <td><%= admin.id %></td>
                                             <td><%= admin.email %></td>
