--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -104,6 +104,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
+                        <%= action_name%>
                         <%= yield %>
                     </div>
                     <!-- /.col-lg-12 -->
