--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -104,7 +104,6 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <%= action_name%>
                         <%= yield %>
                     </div>
                     <!-- /.col-lg-12 -->
@@ -119,6 +118,17 @@
     <!-- /#wrapper -->
  <%=  javascript_include_tag 'application' %>
  <%=  javascript_include_tag 'admins_backoffice' %>
+
+ <% if notice #se tiver uma notice ele da uma mensagem%>  
+ <%= javascript_tag do %>
+ $.bootstrapGrowl('<%= notice %>', {
+ type: 'success',
+ align: 'right',
+ allow_dismiss: true,
+ stackup_spacing: 10
+ });
+ <% end %>
+ <% end %>  
 
     <!-- jQuery -->
     <script src="../vendor/jquery/jquery.min.js"></script>
