adicionei o kaminari para paginar a lista de admins

--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -122,7 +122,7 @@
  <% if notice #se tiver uma notice ele da uma mensagem%>  
  <%= javascript_tag do %>
  $.bootstrapGrowl('<%= notice %>', {
- type: 'success',
+ type: 'success',   
  align: 'right',
  allow_dismiss: true,
  stackup_spacing: 10
@@ -139,7 +139,7 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../vendor/metisMenu/metisMenu.min.js"></script>
 
-    <!-- Custom Theme JavaScript -->
+    <!-- CusSS Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
 
 </body>
