criando controller para as subjects

--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -91,7 +91,13 @@
                             <%end%>
                            
                         </li>
-                                          
+
+                            <li>
+                            <%= link_to '#' do %>
+                            <i class="fa fa-file-text-o fa-fw"></i> Assuntos Area
+                            <%end%>
+                           
+                        </li>  
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
