--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -93,7 +93,7 @@
                         </li>
 
                             <li>
-                            <%= link_to '#' do %>
+                            <%= link_to admins_backoffice_subjects_path do %>
                             <i class="fa fa-file-text-o fa-fw"></i> Assuntos Area
                             <%end%>
                            
