criando as views index/delete para as questoes

--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -98,6 +98,12 @@
                             <%end%>
                            
                         </li>  
+                        <li>
+                            <%= link_to admins_backoffice_questions_path do %>
+                            <i class="fa ffa-th-list fa-fw"></i> Perguntas
+                            <%end%>
+                           
+                        </li>  
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
