--- a/app/views/admins_backoffice/admins/shared/_form.html.erb
+++ b/app/views/admins_backoffice/admins/shared/_form.html.erb
@@ -35,7 +35,7 @@ aria-hidden="true">×</button>
               </div>
                  <div class="form-group">
                 <%= form.label :subject_id %>
-                <%= form.collection_select(:subject_id, Subject.all, :id, :description, {}, {class:"form-control"})%>
+                <%= form.collection_select(:subject_id, @subjects, :id, :description, {}, {class:"form-control"})%>
               </div>
               <button type="submit" class="btn btn-default">Salvar</button>
             <% end %>
