--- a/app/views/admins_backoffice/admins/shared/_form.html.erb
+++ b/app/views/admins_backoffice/admins/shared/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-12">
-    <h1 class="page-header"><%=action_message%></h1>
+    <h1 class="page-header"><%= action_message %></h1>
   </div>
   <!-- /.col-lg-12 -->
 </div>
@@ -8,22 +8,22 @@
 <div class="row">
 
   <% if @question.errors.any? %>
- <div class="alert alert-danger alert-dismissable">
- <button type="button" class="close" data-dismiss="alert"
-aria-hidden="true">×</button>
+    <div class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
 
- <ul>
- <% @question.errors.full_messages.each do |message| %>
- <li><%= message %></li>
- <% end %>
- </ul>
+      <ul>
+        <% @question.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
 
- </div>
-<%end%>
+    </div>
+  <% end %>
+
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-       <%="#{action_message} Pergunta"%>
+        <%= @admin.model_name.human if @admin %>
       </div>
       <div class="panel-body">
         <div class="row"> 
@@ -31,11 +31,11 @@ aria-hidden="true">×</button>
             <%= form_with(model: [:admins_backoffice, @question], local: true) do |form| %>
               <div class="form-group">
                 <%= form.label :description %>
-                <%= form.text_area :description, class: "form-control", placeholder: "Descriçao da Pergunta" %>
+                <%= form.text_area :description, class: "form-control", placeholder: "Descrição da Pergunta" %>
               </div>
-                 <div class="form-group">
+              <div class="form-group">
                 <%= form.label :subject_id %>
-                <%= form.collection_select(:subject_id, @subjects, :id, :description, {}, {class:"form-control"})%>
+                <%= form.collection_select(:subject_id, @subjects, :id, :description, {}, {class: "form-control"}) %>
               </div>
               <button type="submit" class="btn btn-default">Salvar</button>
             <% end %>
