--- a/app/views/admins_backoffice/subjects/new.html.erb
+++ b/app/views/admins_backoffice/subjects/new.html.erb
@@ -1,2 +1,2 @@
 <%= render partial: 'admins_backoffice/admins/shared/form',
-          locals: {action_message: 'Novo'}%>
+        locals: { action_message: t('messages.new', model: @subject.model_name.human) } %>
