--- a/app/views/admins_backoffice/subjects/shared/_form.html.erb
+++ b/app/views/admins_backoffice/subjects/shared/_form.html.erb
@@ -23,7 +23,7 @@ aria-hidden="true">×</button>
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-       <%="#{action_message} Administrador"%>
+       <%= @subject.model_name.human %>
       </div>
       <div class="panel-body">
         <div class="row">
