--- a/app/views/admins_backoffice/admins/edit.html.erb
+++ b/app/views/admins_backoffice/admins/edit.html.erb
@@ -1,2 +1,2 @@
-<%= render partial: 'admins_backoffice/questions/shared/form',
-           locals: { action_message: t('messages.editing', model: @question.model_name.human) } %>
+<%= render partial: 'admins_backoffice/admins/shared/form',
+           locals: { action_message: t('message.editing', model: @admin.model_name.human) } %>
