--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -2,4 +2,4 @@
  *= require bootstrap/dist/css/bootstrap
  *= require surface-fix
  *= require navbar
- */
+ *= require font-awesome/css/font-awesome
