--- a/app/views/admins_backoffice/questions/shared/_form.html.erb
+++ b/app/views/admins_backoffice/questions/shared/_form.html.erb
@@ -4,7 +4,9 @@
     </div>
     <!-- /.col-lg-12 -->
 </div>
+
 <div class="row">
+
     <% if @question.errors.any? %>
         <div class="alert alert-danger alert-dismissable">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -16,6 +18,7 @@
             </ul>
         </div>
     <% end %>
+
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -28,10 +31,12 @@
                         
                             <div class="form-group">
                                 <%= form.label :description %>
-                                <%= form.text_area :description, 
+                                <%= form.hidden_field :description, 
                                          class:"form-control", 
                                         placeholder: t('placeholder.question_description'), rows: 5  %>
+                                <trix-editor input="question_description"></trix-editor>
                             </div>
+
                             <div class="form-group">
                                 <%= form.label :subject_id %>
                                 <%= form.collection_select(:subject_id, @subjects, :id, :description, {}, { class:"form-control" }) %>
@@ -41,23 +46,13 @@
                                 <%= form.fields_for :answers do |answer| %>
                                   <%= render partial: "answer_fields", locals: { f: answer } %>
                                 <% end %>
+
                                 <%= link_to_add_association '[Adicionar Resposta]', form, :answers %>
                             </div>
 
                             <button type="submit" class="btn btn-default">
                               <%= t('button.save') %>
                             </button>
-
-    
-          
-            
-    
-
-          
-          Expand Down
-    
-    
-  
                         <% end %>
                     </div>
                     <!-- /.col-lg-6 (nested) -->
