--- a/app/views/site/shared/_questions.html.erb
+++ b/app/views/site/shared/_questions.html.erb
@@ -1,14 +1,23 @@
-<% @questions.each do |question| %>
-  <%= form_with(url: site_answer_path) do |form| %>
+<!-- Main component for a primary marketing message or call to action -->
+<div class="jumbotron">
+  <h3><%= msg_jumbotron %></h3>
+</div>
 
+<% @questions.each do |question| %>
+  <%= form_with url: site_answer_path do |form| %>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title"><%= question.description %></h3>
+        <h3 class="panel-title">
+          <span class="label label-info" style="margin-right: 10px;">
+            <%= link_to question.subject.description, site_search_subject_path(question.subject_id, question.subject.description), style:"color: white;" %>
+          </span>
+          <%= question.description %>
+        </h3>
       </div>
       <div class="panel-body">
         <ul>
           <% question.answers.each do |answer| %>
-            <li style="list-style:none;">
+            <li style="list-style:none;" >
               <div class="radio">
                 <label>
                   <%= radio_button_tag 'answer_id', answer.id %>
@@ -17,17 +26,12 @@
               </div>
             </li>
           <% end %>
-<li style="list-style:none;"> 
-  <%= form.submit "Responder", class:"btn btn-default", id: "submit_#{question.id}" %>
-  <!--
-  O código acima gera um botão de envio dentro de um formulário.
-  id: "submit_#{question.id}" atribui um ID ao botão. O ID é gerado dinamicamente utilizando interpolação de strings 
-  (#{question.id}), onde question.id é o ID da pergunta associada ao botão. Isso garante que cada botão tenha um ID único.
-  -->
-</li>
-
+          <li style="list-style:none;">
+            <%= form.submit "Responder", class:"btn btn-default", id: "submit_#{question.id}" %>
+          </li>
         </ul>
       </div>
     </div>
   <% end %>
 <% end %>
+<div class="text-center">
