--- a/app/views/site/shared/_questions.html.erb
+++ b/app/views/site/shared/_questions.html.erb
@@ -9,8 +9,8 @@
       <div class="panel-heading">
         <h3 class="panel-title">
           <span class="label label-info" style="margin-right: 10px;">
-            <%= link_to question.subject.description, site_search_subject_path(question.subject_id, question.subject.description), style:"color: white;" %>
-          </span>
+<%= link_to "#{question.subject.description} (#{question.subject.questions.count})", 
+site_search_subject_path(question.subject_id, question.subject.description), style:"color: white;" %>   </span>
           <%= question.description %>
         </h3>
       </div>
