os dados do usuario estao sendo atualizado agora

--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -49,24 +49,6 @@
                   </li>
                 </ul>
               </div>
-
-
-    
-          
-            
-    
-
-          
-          Expand Down
-          
-            
-    
-
-          
-          Expand Up
-    
-    @@ -174,10 +183,7 @@
-  
             </div>
             <!-- /sidebar menu -->
             <!-- /menu footer buttons -->
@@ -191,17 +173,6 @@
             </div>
           </div>
         </div>
-
-    
-          
-            
-    
-
-          
-          Expand Down
-    
-    
-  
         <!-- /page content -->
         <!-- footer content -->
         <footer>
@@ -213,7 +184,18 @@
         <!-- /footer content -->
       </div>
     </div>
+
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'users_backoffice' %>
+    <% if notice %>
+        <%= javascript_tag do %>
+            $.bootstrapGrowl('<%= notice %>', {
+            type: 'success', // (null, 'info', 'danger', 'success')
+            align: 'right', // ('left', 'right', or 'center')
+            allow_dismiss: true, // If true then will display a cross to close the popup.
+            stackup_spacing: 10 // spacing between consecutively stacked growls.
+            });
+        <% end %>
+    <% end %>
   </body>
 </html>
