--- a/app/views/users_backoffice/profile/edit.html.erb
+++ b/app/views/users_backoffice/profile/edit.html.erb
@@ -41,23 +41,23 @@
                         readonly: true  %>
               </div>
           </div>
-          <%= form.fields_for :user_profile do |profile_form|  %>
+          <%= form.fields_for :user_profille do |profille_form|  %>
             <div class="form-group">
-                <%= profile_form.label :address, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
+                <%= profille_form.label :address, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                  <%= profile_form.text_field :address, class:"form-control col-md-7 col-xs-12"%>
+                  <%= profille_form.text_field :address, class:"form-control col-md-7 col-xs-12"%>
                 </div>
             </div>
 
             <div class="form-group">
-              <%= profile_form.label :gender, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
+              <%= profille_form.label :gender, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <div id="gender" class="btn-group" data-toggle="buttons">
                   <label class="btn <%= gender_select(@user, 'M') %>" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                    <%= profile_form.radio_button :gender, "M", "data-parsley-multiple":"gender"%> &nbsp; Masculino &nbsp;
+                    <%= profille_form.radio_button :gender, "M", "data-parsley-multiple":"gender"%> &nbsp; Masculino &nbsp;
                   </label>
                   <label class="btn <%= gender_select(@user, 'F') %>" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                    <%= profile_form.radio_button :gender, "F", "data-parsley-multiple":"gender"%> &nbsp; Feminino &nbsp;
+                    <%= profille_form.radio_button :gender, "F", "data-parsley-multiple":"gender"%> &nbsp; Feminino &nbsp;
                   </label>
                 </div>
               </div>
@@ -82,7 +82,7 @@
             <% end %>
 
             <div class="form-group">
-                <%= profile_form.label :birthdate, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
+                <%= profille_form.label :birthdate, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
                 <div class="col-md-6 col-sm-6 col-xs-12">
 
     
@@ -95,7 +95,7 @@
     
     
   
-                  <%= profile_form.text_field :birthdate, class:"form-control col-md-7 col-xs-12"%>
+                  <%= profille_form.text_field :birthdate, class:"form-control col-md-7 col-xs-12"%>
                 </div>
             </div>
           <% end %>
