--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -18,7 +18,7 @@
         <div class="col-md-3 left_col menu_fixed">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
+              <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span> Alela!</span></a>
             </div>
             <div class="clearfix"></div>
             <!-- menu profile quick info -->
@@ -177,7 +177,7 @@
         <!-- footer content -->
         <footer>
           <div class="pull-right">
-            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+              <a href="https://colorlib.com">Colorlib</a>
           </div>
           <div class="clearfix"></div>
         </footer>
@@ -197,5 +197,11 @@
             });
         <% end %>
     <% end %>
+
+    <%= javascript_tag do %>
+       $(function() {
+         $('.datepicker').datepicker();
+          });
+ <% end %>
   </body>
 </html>
