--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -18,13 +18,13 @@
         <div class="col-md-3 left_col menu_fixed">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span> Alela!</span></a>
+              <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Perfil do Usuário</span></a>
             </div>
             <div class="clearfix"></div>
             <!-- menu profile quick info -->
             <div class="profile clearfix">
               <div class="profile_pic">
-               <%= link_to image_tag('img.jpg', alt:"...", class:"img-circle profile_img"), '#', "data-toggle":"modal", "data-target":"#avatarModal" %>
+                <%= link_to image_tag(avatar_url, alt:"...", class:"img-circle profile_img"), '#', "data-toggle":"modal", "data-target":"#avatarModal" %>
               </div>
               <div class="profile_info">
                 <span>Seja bem-vindo,</span>
@@ -79,7 +79,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <%= image_tag 'img.jpg', alt:'' %>
+                    <%= image_tag avatar_url, alt:'' %>
                     <%= current_user.email %>
                     <span class=" fa fa-angle-down"></span>
                   </a>
@@ -177,34 +177,39 @@
         <!-- footer content -->
         <footer>
           <div class="pull-right">
-              <a href="https://colorlib.com">Colorlib</a>
+            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
           </div>
           <div class="clearfix"></div>
         </footer>
         <!-- /footer content -->
       </div>
     </div>
-
     <!-- Modal -->
     <div class="modal fade" id="avatarModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
+        <%= form_with(url: users_backoffice_profile_path, model: current_user , local: true, class:"form-horizontal form-label-left") do |form| %>
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            <h4 class="modal-title" id="myModalLabel">Avatar</h4>
           </div>
           <div class="modal-body">
-            ...
+            <%= form.fields_for :user_profille do |profille_form|  %>
+              <div class="form-group">
+                <%= profille_form.label :avatar %>
+                <%= image_tag(avatar_url, alt:"...", class:"img-circle profile_img") %>
+                <%= profille_form.file_field :avatar %>
+              </div>
+            <% end %>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <%= form.submit "Salvar", class:"btn btn-primary" %>
           </div>
+        <% end %>
         </div>
       </div>
     </div>
     <!-- /Modal -->
-
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'users_backoffice' %>
     <% if notice %>
@@ -217,11 +222,10 @@
             });
         <% end %>
     <% end %>
-
     <%= javascript_tag do %>
        $(function() {
          $('.datepicker').datepicker();
-          });
- <% end %>
+       });
+    <% end  %>
   </body>
 </html>
