forçando o usuario a efetuar o login

--- a/app/views/site/shared/_questions.html.erb
+++ b/app/views/site/shared/_questions.html.erb
@@ -34,4 +34,11 @@ site_search_subject_path(question.subject_id, question.subject.description), sty
     </div>
   <% end %>
 <% end %>
-<div class="text-center">
+<% if user_signed_in? %>
+  <div class="text-center">
+    <%= paginate @questions %>
+  </div>
+<% else %>
+  <div class="alert alert-warning" role="alert">
+    Efetue login para poder continuar respondendo as questões...
+  </div>
