--- a/app/views/site/shared/_questions.html.erb
+++ b/app/views/site/shared/_questions.html.erb
@@ -2,15 +2,14 @@
 <div class="jumbotron">
   <h3><%= msg_jumbotron %></h3>
 </div>
-
 <% @questions.each do |question| %>
   <%= form_with url: site_answer_path do |form| %>
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
           <span class="label label-info" style="margin-right: 10px;">
-<%= link_to "#{question.subject.description} (#{question.subject.questions_count})", 
-site_search_subject_path(question.subject_id, question.subject.description), style:"color: white;" %>      </span>
+            <%= link_to "#{question.subject.description} (#{question.subject.questions_count})", site_search_subject_path(question.subject_id, question.subject.description), style:"color: white;" %>
+          </span>
           <%= question.description %>
         </h3>
       </div>
@@ -42,3 +41,4 @@ site_search_subject_path(question.subject_id, question.subject.description), sty
   <div class="alert alert-warning" role="alert">
     Efetue login para poder continuar respondendo as questões...
   </div>
+<% end %>
