--- a/app/assets/stylesheets/users_backoffice.scss
+++ b/app/assets/stylesheets/users_backoffice.scss
@@ -1,12 +1,13 @@
-// Place all the styles related to the admins_backoffice controller here.
+// Place all the styles related to the users_backoffice controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 /*
-*= require bootstrap/dist/css/bootstrap
-*= require font-awesome/css/font-awesome
-*= require nprogress/nprogress
-*= require malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar
-*= require jquery-ui/themes/base/theme
-*= require jquery-ui/themes/base/datepicker
-*= require custom
-*/
+ *= require bootstrap/dist/css/bootstrap
+ *= require font-awesome/css/font-awesome
+ *= require nprogress/nprogress
+ *= require malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar
+ *= require jquery-ui/themes/base/datepicker
+ *= require jquery-ui/themes/base/theme
+ *= require custom
+ */
