--- a/app/views/users_backoffice/profile/edit.html.erb
+++ b/app/views/users_backoffice/profile/edit.html.erb
@@ -1,3 +1,5 @@
+
+  
 <div class="row">
   <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="x_panel">
@@ -41,22 +43,22 @@
                         readonly: true  %>
               </div>
           </div>
-          <%= form.fields_for :user_profille do |profille_form|  %>
+          <%= form.fields_for :user_profile do |profile_form|  %>
             <div class="form-group">
-                <%= profille_form.label :address, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
+                <%= profile_form.label :address, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                  <%= profille_form.text_field :address, class:"form-control col-md-7 col-xs-12"%>
+                  <%= profile_form.text_field :address, class:"form-control col-md-7 col-xs-12"%>
                 </div>
             </div>
             <div class="form-group">
-              <%= profille_form.label :gender, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
+              <%= profile_form.label :gender, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <div id="gender" class="btn-group" data-toggle="buttons">
                   <label class="btn <%= gender_select(@user, 'M') %>" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                    <%= profille_form.radio_button :gender, "M", "data-parsley-multiple":"gender"%> &nbsp; Masculino &nbsp;
+                    <%= profile_form.radio_button :gender, "M", "data-parsley-multiple":"gender"%> &nbsp; Masculino &nbsp;
                   </label>
                   <label class="btn <%= gender_select(@user, 'F') %>" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                    <%= profille_form.radio_button :gender, "F", "data-parsley-multiple":"gender"%> &nbsp; Feminino &nbsp;
+                    <%= profile_form.radio_button :gender, "F", "data-parsley-multiple":"gender"%> &nbsp; Feminino &nbsp;
                   </label>
                 </div>
               </div>
@@ -76,11 +78,12 @@
                  });
                });
             <% end %>
+            
             <div class="form-group">
-                <%= profille_form.label :birthdate, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
+                <%= profile_form.label :birthdate, class:"control-label col-md-3 col-sm-3 col-xs-12" %>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                  <%= profille_form.text_field :birthdate, 
-                      value: (l(@user.user_profille.birthdate) unless @user.user_profille.birthdate.blank?) ,
+                  <%= profile_form.text_field :birthdate, 
+                      value: (l(@user.user_profile.birthdate) unless @user.user_profile.birthdate.blank?) ,
                       class:"form-control col-md-7 col-xs-12 datepicker"%>
                 </div>
             </div>
@@ -106,6 +109,8 @@
             </div>
           </div>
         <% end %>
+          <%= stylesheet_link_tag    'users_backoffice' %>
+          <%= javascript_include_tag 'users_backoffice' %>
       </div>
     </div>
   </div>
